--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                     <h3>Data Handling</h3>
                     <p>Import, manage, and transform analytical chemistry data with ease.</p>
                     <ul class="features-list">
-                        <li>Multi-format support (CSV, Excel, SAM, RAW)</li>
+                        <li>Multi-format support (CSV, Excel, RAW)</li>
                         <li>Spectroscopy data conversion</li>
                         <li>Data preprocessing tools</li>
                         <li>Workspace management</li>
